--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,49 @@
+argcomplete==3.6.2
+attrs==25.3.0
 build==1.3.0
+cachetools==6.2.0
 certifi==2025.8.3
+chardet==5.2.0
 charset-normalizer==3.4.3
+colorama==0.4.6
+colorlog==6.9.0
 coverage==7.10.6
+dependency-groups==1.3.1
+distlib==0.4.0
 docutils==0.22
+filelock==3.19.1
 id==1.5.0
 idna==3.10
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.3.0
+jproperties==2.1.2
 keyring==25.6.0
 markdown-it-py==4.0.0
 mdurl==0.1.2
 more-itertools==10.8.0
+mqtt-sn-12==1.0.9
 nh3==0.3.0
+nox==2025.5.1
 packaging==25.0
 paho-mqtt==2.1.0
+platformdirs==4.4.0
+pluggy==1.6.0
+pyfakefs==5.9.3
 Pygments==2.19.2
+pyproject-api==1.9.1
 pyproject_hooks==1.2.0
+pysonar==1.2.1.3951
+PyYAML==6.0.3
 readme_renderer==44.0
 requests==2.32.5
 requests-toolbelt==1.0.0
+responses==0.25.8
 rfc3986==2.0.0
 rich==14.1.0
+six==1.17.0
+tomli==2.2.1
+tox==4.30.2
 twine==6.2.0
 urllib3==2.5.0
+virtualenv==20.34.0
